--- a/mini/mini.html
+++ b/mini/mini.html
@@ -21,7 +21,8 @@
     <!-- Create a reset.css file and add the contents from  https://cssreset.com/scripts/eric-meyer-reset-css/-->
     <!-- Make sure you link your reset.css file-->
 
-
+    <link rel="stylesheet" href="./reset.css"/>
+    <link rel="stylesheet" href="./mini.css"/>
 
     <!--Create a mini.css file and link it here-->
 
@@ -31,13 +32,23 @@
 <body>
 
 <!-- Add header element here. The header element is going to contain your website navigation & company logo-->
-
+<header>
+    <img src = "/logo_white.png"/>
+    <ul>
+        <li>Contact</li>
+        <li>Features</li>
+        <li>Team</li>
+        <li>Services</li>
+        <li>About</li>
+    </ul>
+</header>
 
 
 <!-- The main tag is going to hold all of our website content. -->
 <main>
-
-
+<h1>To be better is to execute more</h1>
+<h2>Its not the smartest who will win, but those who put in the work</h2>
+<button>GET STARTED</button>
 
 
 
